--- a/B4-yanki-service/src/main/resources/bootstrap.yml
+++ b/B4-yanki-service/src/main/resources/bootstrap.yml
@@ -5,7 +5,7 @@ spring:
     name: yanki-service
   cloud:
     config:
-      uri: http://localhost:8090
+      uri: http://config-server:8090
       username: yloayza
       password: yloayza2022
   data:
